# middleware/authMiddleware.js
@@ -1,0 +1,21 @@
+const jwt = require('jsonwebtoken');
+
+const protect = (req, res, next) => {
+  const authHeader = req.headers.authorization;
+
+  if (authHeader && authHeader.startsWith('Bearer')) {
+    const token = authHeader.split(' ')[1];
+
+    try {
+      const decoded = jwt.verify(token, process.env.JWT_SECRET);
+      req.user = decoded; // Attach user info to request
+      next();
+    } catch (error) {
+      return res.status(401).json({ message: 'Token is not valid' });
+    }
+  } else {
+    return res.status(401).json({ message: 'No token provided' });
+  }
+};
+
+module.exports = protect;
