# swagger.yaml
@@ -8,7 +8,6 @@ servers:
   - url: https://cse-341-library-api.onrender.com
   - url: http://localhost:3000
 
-
 tags:
   - name: Authors
     description: Operations related to authors
@@ -92,6 +91,8 @@ paths:
     post:
       tags: [Authors]
       summary: Create one or more authors
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -105,6 +106,8 @@ paths:
       responses:
         '201':
           description: Author(s) created
+        '401':
+          description: Unauthorized
         '422':
           description: Validation error
 
@@ -127,6 +130,8 @@ paths:
     put:
       tags: [Authors]
       summary: Update author by ID
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -142,6 +147,8 @@ paths:
       responses:
         '200':
           description: Author updated
+        '401':
+          description: Unauthorized
         '422':
           description: Validation error
         '404':
@@ -150,6 +157,8 @@ paths:
     delete:
       tags: [Authors]
       summary: Delete author by ID
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -159,6 +168,8 @@ paths:
       responses:
         '200':
           description: Author deleted
+        '401':
+          description: Unauthorized
         '404':
           description: Author not found
 
@@ -208,6 +219,8 @@ paths:
     put:
       tags: [Books]
       summary: Update book by ID
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -223,6 +236,8 @@ paths:
       responses:
         '200':
           description: Book updated
+        '401':
+          description: Unauthorized
         '422':
           description: Validation error
         '404':
@@ -231,6 +246,8 @@ paths:
     delete:
       tags: [Books]
       summary: Delete book by ID
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -240,6 +257,8 @@ paths:
       responses:
         '200':
           description: Book deleted
+        '401':
+          description: Unauthorized
         '404':
           description: Book not found
 
